// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup.Radio /> snapshot checked 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  class=""
>
  <label
    class="c0"
    for="radio-button-1"
  >
    <input
      checked=""
      class="c1"
      id="radio-button-1"
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot children 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  class=""
>
  <label
    class="c0"
    for="radio-button-7"
  >
    <input
      class="c1"
      id="radio-button-7"
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot disabled 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-left: 8px;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  class=""
>
  <label
    class="c0"
    disabled=""
    for="radio-button-4"
  >
    <input
      class="c1"
      disabled=""
      id="radio-button-4"
      type="radio"
      value="Foo"
    />
    Foo
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root c2"
      data-qtm-preloader="icon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      theme="[object Object]"
      viewBox="0 0 24 24"
    >
      <path
        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
      />
    </svg>
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot disabled with an error 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-left: 8px;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  class=""
>
  <label
    class="c0"
    disabled=""
    for="radio-button-6"
  >
    <input
      class="c1"
      disabled=""
      id="radio-button-6"
      type="radio"
      value="Foo"
    />
    Foo
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root c2"
      data-qtm-preloader="icon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      theme="[object Object]"
      viewBox="0 0 24 24"
    >
      <path
        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
      />
    </svg>
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot error 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  class=""
>
  <label
    class="c0"
    for="radio-button-5"
  >
    <input
      class="c1"
      id="radio-button-5"
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot icon 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-right: 8px;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  class=""
>
  <label
    class="c0"
    for="radio-button-3"
  >
    <input
      class="c1"
      id="radio-button-3"
      type="radio"
      value="Foo"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root c2"
      data-qtm-preloader="icon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      theme="[object Object]"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot inline 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c0:last-child {
  margin-right: 0;
}

.c1 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="radio-button-2"
  >
    <input
      class="c2"
      id="radio-button-2"
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot simple 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  class=""
>
  <label
    class="c0"
    for="radio-button-0"
  >
    <input
      class="c1"
      id="radio-button-0"
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;
